[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/CardSelector.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 300 )

[node name="Cards" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 450, 480 )

[node name="ColorRect" type="ColorRect" parent="Area2D"]
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 52, 70 )
mouse_filter = 2
color = Color( 0.709804, 1, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 950, 480 )

[node name="ColorRect" type="ColorRect" parent="Area2D2"]
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 52, 70 )
mouse_filter = 2
color = Color( 0.101961, 0, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 1 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 1450, 480 )

[node name="ColorRect" type="ColorRect" parent="Area2D3"]
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 52, 70 )
mouse_filter = 2
color = Color( 1, 0, 0.0941176, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="input_event" from="Area2D3" to="." method="_on_Area2D3_input_event"]
